improved button styling throughout

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -4,7 +4,7 @@
       About
     </ion-title>
     <ion-buttons slot="end">
-      <ion-button fill="clear" (click)="close()" color="medium" size="small">
+      <ion-button (click)="close()" color="medium">
         <ion-icon name="close-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
