--- a/src/app/components/address-book/address-book.component.html
+++ b/src/app/components/address-book/address-book.component.html
@@ -72,7 +72,7 @@
     </table>
   </div>
 
-  <ion-fab vertical="top" horizontal="end" slot="fixed" edge=true>
+  <ion-fab vertical="top" horizontal="end" slot="fixed" class="create-contact-button">
     <ion-fab-button size="small" color="secondary" (click)="createContact()">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
