--- a/src/app/components/labels/manage-labels/manage-labels.component.html
+++ b/src/app/components/labels/manage-labels/manage-labels.component.html
@@ -4,7 +4,7 @@
       Manage Labels
     </ion-title>
     <ion-buttons slot="end">
-      <ion-button fill="clear" (click)="cancel(labelsForm)" color="medium" size="small">
+      <ion-button (click)="cancel(labelsForm)" color="medium">
         <ion-icon name="close-outline"></ion-icon>
       </ion-button>
   </ion-buttons>
@@ -15,7 +15,7 @@
   <ion-content>
     <ng-container *ngFor="let label of labels; let i = index">
 
-      <ion-item class="input-field field">
+      <ion-item class="input-field no-background">
         <ion-label position="fixed" class="label-placeholder">Label:</ion-label>
         <ion-input [name]="label.id" required [(ngModel)]="label.title" clearInput></ion-input>
         <ion-icon name="trash-outline" slot="end" (click)="delete(label)" class="clickable"></ion-icon>
@@ -23,15 +23,15 @@
       <span [class.hidden]="labelsForm.controls[label.id]?.valid" class="input-error-message">Required</span>
     </ng-container>
 
-    <ion-item lines="none" class="field">
-      <ion-button fill="clear" (click)="add()" color="secondary" size="small">
+    <ion-item lines="none" class="no-background">
+      <ion-button fill="clear" (click)="add()" color="secondary">
         <ion-icon name="add-outline"></ion-icon>
-        <ion-label>Add Label</ion-label>
+        <ion-label>New Label</ion-label>
       </ion-button>
     </ion-item>
   </ion-content>
   <div class="buttons-container">
-    <ion-button class="action-button" slot="end" (click)="cancel(labelsForm)" color="light">Cancel</ion-button>
-    <ion-button class="action-button left-margin" slot="end" type="submit" color="secondary">Save</ion-button>
+    <ion-button (click)="cancel(labelsForm)" fill="outline" color="medium">Cancel</ion-button>
+    <ion-button type="submit" fill="outline" color="secondary">Save</ion-button>
   </div>
 </form>
