--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -25,7 +25,7 @@
     <div class="bottom-margin">
       Click the plus icon in the top right corner to create a contact.
       When you are creating a contact, you must add at least one detail, other than an image, to save the contact.
-      Trying to add a label to a contact when there are no labels created will open an option to create labels.
+      When adding a label to a contact, the labels pop-up will have an option to create labels.
     </div>
     <div class="bottom-margin">
       When creating a contact while viewing a label group, the label will be pre-selected to the contact for you. The label can be unselected.
