moved openManageLabels from address book service back into menu and select label components; fixed manage label and edit contact scrolling issues; updated labels icon in menu component; manage columns updated to set focus on new label input

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -24,7 +24,7 @@
     <div class="topic-heading">Creating a Contact</div>
     <div class="bottom-margin">
       Click the plus icon in the top right corner to create a contact.
-      When you are creating a contact, you must add at least one detail, other than an image, to save the contact.
+      When you are creating a contact, you must add at least one detail, other than an image and label, to save the contact.
       When adding a label to a contact, the labels pop-up will have an option to create labels.
     </div>
     <div class="bottom-margin">
