--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -24,9 +24,9 @@
       <mat-divider></mat-divider>
 
       <ion-item>
-        <ion-icon name="pricetag-outline" slot="start"></ion-icon>
+        <ion-icon name="pricetags-outline" slot="start"></ion-icon>
         <ion-label>Labels</ion-label>
-        <ion-button fill="clear" (click)="addressBookService.openManageLabels()" color="dark" size="small" slot="end" class="edit-labels-icon">
+        <ion-button fill="clear" (click)="openManageLabels()" color="dark" size="small" slot="end" class="edit-labels-icon">
           <ion-icon name="create-outline"></ion-icon>
         </ion-button>
       </ion-item>
